NEWS for package xlsx

Changes in version 0.5.7 (released 2014-08-XX)

 o Fixed issue 41.  There was a bug in the '+' method for CellStyle
 that was triggered when Font + Fill was not working properly. 

 o Added a new function called setRowHeight (wish of Sven Neulinger). 



Changes in version 0.5.6 (released 2014-04-01)

 o Functions read.xlsx, read.xlsx2 crashed when trying to read empty
 sheets.  Now they return NULL if the sheet exists but it's empty.
 See Issue 28.

 o Fixed a corner case in addDataFrame when the data.frame has zero
 columns. 

 o Allow colors to be specified as hex strings (e.g. "#FF0000" for
 red).  Previously, only R colors were supported.  This change applies
 only to the xlsx format.  Old style binary xls format still only
 supports a limited number of colors (POI limitation).  

 o Change the .onLoad functions from both xlsxjars and xlsx package to 
 allow for other users to initialize the Java VM themselves (useful
 for other packages that depend on xlsxjars).  This is not a user
 visible change. See Issue 36. 

Changes in version 0.5.5 (released 2013-12-01)

 o Allow CB.setMatrixData to accept character matrices too.  It only
 worked with numeric matrices in earlier versions.  See Issue 19. 

 o Fixed an issue with read.xlsx2 when you wanted columns of type
 character, but the cell was of numeric type and the value was an
 exact integer (say 12).  In R the result was imported as "12.0"
 instead of "12".  See Issue 25.

 o DateTime and Date formatting when using write.xlsx and addDataFrame
 was hardcoded to the Java formats "m/d/yyyy h:mm:ss" and "m/d/yyyy"
 respectively.  These have been added as package options to allow
 for other formats when using these functions.  See Issue 26.

 o For write.xlsx(2) when append==TRUE, check if file exists and load
 it only if it exists, otherwise create the workbook.  As suggested by
 Richard Cotton.  See Issue 27. 



Changes in version 0.5.3 (released 2013-07-11)
