@@ -1,5 +1,7 @@
 # .guess_cell_type
+# .onAttach
 # .onLoad
+# .Rcolor2XLcolor
 # .splitBlocks
 # .hssfcolor
 # .xssfcolor  
